Fixed horizontal scrollbar caused by "fork me" button

--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,15 @@ pre {
 }
 
 #forkme {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+#forkme p {
     background: #CC6600;
     margin: 0;
     padding: 2px;
